----------------------------------------------
                 TeamTalk
----------------------------------------------

Version 5.18.1, unreleased
Default Qt Client
-
Android Client
- Option to automatically join root channel in preferences
- Added the ability to control user's transmissions
- Ability to play sound when voice activation is toggled
- Ability to use Text-To-Speech to announce transmission changes
iOS Client
-
Server
-

Version 5.18, 2025/05/05
Default Qt Client
- Media tab in main window for controlling media file streaming
- Support "{username}" variable for majority of TTS and status events related to user action
- Indication when user is sharing desktop in channel list
- Ability to restore all custom Text-To-Speech and status bar events to default values
- All byte sizes converted to local format
- Option to use TeamTalk Sound Output device for default sound event playback mode
- Option to choose bitween text or emoji for user and channel info in channel list
- Last login time shown in "User Accounts" dialog
- Ability to sort by "Last Login Time" in "User Accounts" dialog
- Ability to send toast notifications on Linux and Windows
- Ability to change chat history to list view in "Preferences" dialog
- Improved "Server Properties" and "Channel" dialog accessibility
- Nickname and Last Joined Channel are now stored in .tt file
- WebRTC updated from r4332 to r6818
- Qt updated to 6.9.0 on macOS and Windows
- OPUS updated to v1.5.2
- Ability to custom chat templates
- Remove option "Timestamp messages", use custom templates instead
- Ask to retranslate Text-To-Speech events and status messages on language change
- Fixed gender changed from female to male when migrating to 5.17 release
- Fixed sound events disabled when migrating to 5.17 release
- Fixed language not set at first start
- Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled